--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "electron": "^13.1.7",
+    "electron-store": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-loader": "^9.2.4",
