--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.5",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "@types/react": "^17.0.15",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.9",
     "electron": "^13.1.7",
     "electron-store": "^8.0.0",
