--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "@material-ui/icons": "^4.11.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
     "electron": "^13.1.7",
     "electron-store": "^8.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-loader": "^9.2.4",
